# python_fit_tool

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  setup.py  tox.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: FIT_CONFORMANCE_DESIGN.md
fit_tool/: __init__.py  base_type.py  cli.py  data_message.py  definition_message.py  developer_field.py  developer_field_definition.py  exceptions.py  field.py  field_component.py  field_definition.py  fit_file.py  fit_file_builder.py  fit_file_header.py  fit_file_stream.py  generic_message.py  message.py  record.py  sub_field.py  validation.py
fit_tool/examples/: modify_activity_example.py  read_activity_example.py  write_activity_example.py  write_course_example.py  write_workout_example.py
fit_tool/profile/: profile_type.py
fit_tool/profile/messages/: aad_accel_features_message.py  accelerometer_data_message.py  activity_message.py  ant_channel_id_message.py  ant_rx_message.py  ant_tx_message.py  aviation_attitude_message.py  barometer_data_message.py  beat_intervals_message.py  bike_profile_message.py  blood_pressure_message.py  cadence_zone_message.py  camera_event_message.py  capabilities_message.py  chrono_shot_data_message.py  chrono_shot_session_message.py  climb_pro_message.py  common_fields.py  connectivity_message.py  course_message.py  course_point_message.py  developer_data_id_message.py  device_aux_battery_info_message.py  device_info_message.py  device_settings_message.py  dive_alarm_message.py  dive_apnea_alarm_message.py  dive_gas_message.py  dive_settings_message.py  dive_summary_message.py  event_message.py  exd_data_concept_configuration_message.py  exd_data_field_configuration_message.py  exd_screen_configuration_message.py  exercise_title_message.py  field_capabilities_message.py  field_description_message.py  file_capabilities_message.py  file_creator_message.py  file_id_message.py  (+85 more)
fit_tool/tests/: test_activity_files.py  test_base_type.py  test_cli.py  test_conversions.py  test_course_files.py  test_crc.py  test_data_message.py  test_definition_message.py  test_developer_fields.py  test_field.py  test_field_component.py  test_fit_file.py  test_fit_file_header.py  test_garmin_sdk_interop.py  test_profile.py  test_record.py  test_sdk_files.py  test_validation.py  test_workout_files.py  test_write_activity_file.py
fit_tool/tests/data/interop/: activity.json
fit_tool/tests/data/sdk/: MonitoringFile.csv  activity_developerdata.csv  activity_multisport.csv  activity_poolswim.csv  activity_poolswim_with_hr.csv
fit_tool/tests/interop/: garmin_fit_bridge.mjs
fit_tool/utils/: crc.py  logging.py
news/: 0.feature  10.feature.md  11.misc.md  13.misc.md  14.dep  17.feature.md  18.feature.md  19.dep.md  2.bugfix.md  24.dep  27.dep  4.feature.md  7.bugfix.md
