[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fit-tool-ng"
dynamic = ["version"]
description = "A library for reading and writing Garmin FIT files."
readme = "README.md"
authors = [
    { name = "Matt Tucker", email = "mtucker@stagescycling.com" },
    { name = "friendsa", email = "github@duanfei.org" },
]
license = "BSD-3-Clause"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

requires-python = ">=3.7"

dependencies = ["openpyxl==3.1.5", "bitstruct==8.21.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
fittool = "fit_tool.cli:main"

[tool.pytest.ini_options]
testpaths = ["fit_tool/tests"]

[tool.ruff]
line-length = 120
target-version = "py38"
exclude = ["fit_tool/profile"]

[project.urls]
Homepage = "https://bitbucket.org/stagescycling/python_fit_tool.git"

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "FA",  # flake8-future-annotations
    "PGH", # pygrep-hooks
    "RUF", # ruff
    "W",   # pycodestyle
    "UP",  # pyupgrade
    "YTT", # flake8-2020
]
extend-ignore = ["B018", "B019", "RUF018"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.setuptools_scm]
tag_regex = "^(?:v|version/)?(?P<version>.*)$"
