[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fit-tool"
version = "0.9.14"
description = "A library for reading and writing Garmin FIT files."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    {name = "Matt Tucker", email = "mtucker@stagescycling.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.8"
dependencies = [
    "openpyxl>=2.5.12",
    "bitstruct>=8.11.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/shaonianche/python_fit_tool"
Repository = "https://github.com/shaonianche/python_fit_tool.git"

[project.scripts]
fittool = "fit_tool.cli:main"

[tool.setuptools.packages.find]
include = ["fit_tool*"]

[tool.setuptools]
zip-safe = false

[tool.pytest.ini_options]
testpaths = ["fit_tool/tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.coverage.run]
source = ["fit_tool"]
omit = ["fit_tool/tests/**/*", "fit_tool/examples/**/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
